syntax = "proto3";

                 package lfgDungeonTemplate;
service LfgDungeonTemplateService {
 rpc createLfgDungeonTemplate (LfgDungeonTemplateCreateInput) returns (LfgDungeonTemplate) {}
rpc lfgDungeonTemplates (findManyParams) returns (stream LfgDungeonTemplate) {}
rpc lfgDungeonTemplate (LfgDungeonTemplateWhereUniqueInput) returns (LfgDungeonTemplate) {}
rpc updateLfgDungeonTemplate (LfgDungeonTemplateUpdateInput) returns (LfgDungeonTemplate) {}
rpc deleteLfgDungeonTemplate (LfgDungeonTemplateWhereUniqueInput) returns (LfgDungeonTemplate) {} 
 }
message LfgDungeonTemplateCreateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message LfgDungeonTemplate {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message LfgDungeonTemplateWhereUniqueInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message LfgDungeonTemplateUpdateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message findManyParams {

};